app/static/default.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Poppins&family=Righteous&family=Ubuntu:wght@500&display=swap');

:root {
    --color-bg: 96, 110, 130;
    --color-header: 41, 43, 51;
    --color-header-darkgray: 47, 52, 62;
    --color-header-gray: 55, 63, 75;
    --color-offwhite: 242, 242, 242;
    --color-highlight: 255, 166, 0;
    --color-link-highlight: 255, 208, 0;
    --color-text: 255, 255, 255;
    --color-warning: 255, 94, 0;
    --font-header: 'Poppins', sans-serif;
    --font-main: 'Open Sans', sans-serif;
}

body, html {
    height: 100%;
    font-family: var(--font-main);
    background-color: rgb(var(--color-header));
    color: rgb(var(--color-text));
    margin: 0;
}

a {
    color: rgb(var(--color-highlight));
    text-decoration: none;
}

a:hover {
    color: rgb(var(--color-link-highlight));
}

::selection {
    background-color: rgb(var(--color-bg));
}

input {
    font-family: var(--font-main);
    padding: 0.2em;
}

input[type='submit'] {
    background-color: rgb(var(--color-highlight));
    border-color: rgb(var(--color-highlight));
}

textarea, input {
    border: 0.15em solid transparent;
}

textarea:focus, input:focus {
    outline: none !important;
    border: 0.15em solid rgb(var(--color-highlight));
}

.small-text {
    font-size: 0.8em;
}

.default-text {
    color: rgb(var(--color-text));
}

.highlight {
    color: rgb(var(--color-highlight));
}

.warning {
    color: rgb(var(--color-warning));
}

.content-container {
    padding: 1em;
    background: rgb(var(--color-bg));
}

.header {
    position: relative;
    margin: 0;
    background-color: rgb(var(--color-header));
    color: rgb(var(--color-text));
}

.header-logo {
    display: inline-block;
    padding: 1em;
}

.header-logo a {
    font-family: var(--font-header);
    font-size: 2em;
    color: rgb(var(--color-text));
}

.header-logo-bino {
    letter-spacing: -0.1em;
}

.header-prof-av {
    float: right;
    padding-top: 1em;
}

.header-prof-av img {
    height: 2.5em;
    width: 2.5em;
}

.menu-button {
    float: right;
    width: 2.25em;
    padding: 1.5em;
    padding-bottom: 1em;
    cursor: pointer;
}

#menu-container {
    position: absolute;
    display: none;
    z-index: 1;
    width: 100%;
    min-height: 100vh;
    background-color: rgb(var(--color-header-gray));
}

.menu-item {
    font-family: var(--font-header);
    padding: 1em;
    font-size: 1.75em;
}

.menu-link {
    color: rgb(var(--color-text));
}

#svg-menu {
    fill: rgb(var(--color-text));
}

.footer {
    position: relative;
    padding: 1em;
    bottom: 0;
    text-align: center;
    font-size: 0.9em;
}

.footer-link {
    display: inline-block;
    margin: 0.5em;
}

.svg-icon-container {
    position: relative;
    display: inline-block;
    width: 1em;
    fill: rgb(var(--color-text));
}

.svg-icon-container svg {
    display: block;
}

.clickable {
    cursor: pointer;
}

.comment-icon {
    width: 1.5em;
}

.like-button {
    background-color: transparent;
    border: none;
    padding: 0;
}

.like-icon {
    width: 2em;
}

.liked-icon {
    fill: rgb(var(--color-highlight))
}

.flashes-container {
    color: rgb(var(--color-highlight));
    font-size: 0.8em;
}

.info-box {
    background-color: rgba(0, 0, 0, 0.2);
    padding: 1em;
    border-color: rgb(var(--color-text));
}

.flashes-container legend {
    color: rgb(var(--color-text));
}

.flashes-container li {
    position: relative;
    list-style-position: inside;
}

.acct-form-container {
    margin: auto;
    margin-top: 1em;
    margin-bottom: 1em;
    padding: 1.5em;
    padding-left: 2em;
    padding-right: 2em;
    width: 23em;
    max-width: 80%;
    background-color: rgb(var(--color-header));
    text-align: center;
}

.form-container {
    position: relative;
    margin: auto;
    width: 80%;
}

.form-container input {
    font-size: 1em;
    padding: 0.5em;
    margin-top: 0.12em;
    margin-bottom: 0.12em;
    box-sizing: border-box;
}

.form-container input[type='text'], input[type='password'] {
    width: 100%;
}

.form-container input[type='submit'] {
    width: 100%;
    font-weight: bold;
    cursor: pointer;
}

.login-submit-container {
    position: relative;
    width: 100%;
    height: 3em;
}

.remember-me-box {
    float: left;
    margin: 0.5em;
}

.login-container input[type='submit'] {
    float: right;
    width: 50%;
}

.headline {
    font-size: 1.75em;
    font-weight: bold;
}

.tagline {
    font-size: 1.25em;
}

.simple-form {
    padding: 1em;
}

.simple-form input {
    width: 50%;
    margin: 0.1em;
    border-radius: 5px;
}

.simple-form input:focus {
    border-radius: 5px;
}

.simple-form input[type='submit'] {
    width: auto;
    padding: 0.5em;
    padding-top: 0.3em;
    padding-bottom: 0.3em;
    margin-top: 0.5em;
}

#delete-confirm {
    display: none;
}

#delete-confirm input {
    margin: 0.5em;
}

#delete-confirm input[type='password'] {
    width: 30%;
}

#delete-confirm input[type='submit'] {
    background-color: rgb(var(--color-warning));
    border-color: rgb(var(--color-warning));
}

.search-container {
    display: inline;
    width: 100%;
    box-sizing: border-box;
}

.search-container input {
    width: 80%;
    padding-left: 1em;
    box-sizing: border-box;
}

.search-container input[type='submit'] {
    float: right;
    width: 20%;
    box-sizing: border-box;
}

.list-results {
    border-collapse: collapse;
    background-color: rgb(var(--color-header));
    min-width: 26em;
}

.list-results td {
    border-bottom: 0.2em solid rgb(var(--color-bg));
    border-collapse: collapse;
    padding: 0.5em;
    background-color: rgb(var(--color-header-gray));
}

.list-results th {
    padding: 0.5em;
    text-align: center;
    text-transform: capitalize;
}

.prof-header {
    margin: auto;
    padding: 1em;
    width: 100%;
    text-align: center;
    background-color: rgb(var(--color-header));
    box-sizing: border-box;
}

.prof-info-container {
    background-color: rgb(var(--color-header-gray));
}

.prof-info-title {
    background-color: rgb(var(--color-header));
    text-align: center;
    text-transform: uppercase;
    font-family: var(--font-header);
    padding: 1em;
}

.prof-info-bar {
    padding: 1em;
    width: 100%;
}

.prof-tools-container {
    height: 2em;
    padding-bottom: 1em;
    padding-right: 0.5em;
}

.stalk-count {
    padding-left: 0.5em;
    padding-right: 1em;
    font-weight: bold;
}

.user-av {
    width: 30vw;
    height: auto;
    max-width: 200px;
}

.user-av-med {
    width: 60px;
}

.user-av-small {
    width: 30px;
}

.user-av-med img {
    border: 0.2em solid rgb(var(--color-header-gray));
}

.post-title-container {
    background-color: rgb(var(--color-header));
    padding: 1em;
}

.post-title {
    padding-left: 1em;
    width: 100%;
}

.post-content {
    background-color: seagreen;
    padding: 1em;
}

.post-desc {
    background-color: rgb(var(--color-header-gray));
    display: flex;
    overflow-wrap: anywhere;
    padding: 1em;
}

.post-user-container {
    text-align: center;
    width: 5em;
}

.post-desc-container {
    padding-left: 1em;
}

.comment {
    border-left: 0.4em solid rgb(var(--color-bg));
}

.comment.op {
    border-left: 0.4em solid rgb(var(--color-highlight));
}

.comment-username.not-op a {
    color: rgb(var(--color-text));
}

.comment .post-footer {
    background-color: rgb(var(--color-header-darkgray));
    padding-top: 0.5em;
    padding-bottom: 0.5em;
}

.post-footer {
    background-color: rgb(var(--color-header));
    padding: 1em;
}

.post-tool-padding {
    margin-left: 0.5em;
}

.post-options-button {
    position: relative;
    fill: rgb(var(--color-text));
    float: right;
    height: 2em;
    width: 2em;
    cursor: pointer;
}

.post-options-menu {
    display: none;
    position: absolute;
    right: 4em;
    z-index: 1;
    min-width: 30vw;
    border: 0.2em solid rgb(var(--color-highlight));
}

.post-options-menu-item {
    background-color: rgb(var(--color-header-gray));
    padding: 0.5em;
    text-align: center;
    width: 100%;
    font-size: 1em;
    color: rgb(var(--color-text));
    border-color: rgb(var(--color-header-gray));
    box-sizing: border-box;
    cursor: pointer;
}

.post-options-menu-item:hover {
    color: rgb(var(--color-highlight));
}

.text-area-form textarea {
    width: 80vw;
    font-family: var(--font-main);
}

.profile-button {
    padding-left: 0.5em;
    padding-right: 0.5em;
    width: 2em;
    max-height: 2em;
    fill: rgb(var(--color-highlight));
}

.input-button-standard {
    padding: 1em;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    border-radius: 5px;
    cursor: pointer;
}

.input-button-mid-color {
    background-color: rgb(var(--color-bg));
    border: 0.1em ridge rgb(var(--color-header-gray));
    color: rgb(var(--color-text));
}

.stalk-button input[type='submit'] {
    background-color: rgb(var(--color-header));
    border-color: rgb(var(--color-highlight));
    border-radius: 5px;
    color: rgb(var(--color-text));
    padding: 1em;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    font-family: var(--font-header);
    text-transform: capitalize;
}

.select-category-container {
    background: rgb(var(--color-header));
    margin-left: 1em;
    margin-right: 1em;
    padding: 0.5em;
}

.categories-container {
    padding: 1em;
}

.dashboard-header {
    background-color: rgb(var(--color-header))
}

.dashboard-quick-links {
    background-color: rgb(var(--color-header-gray));
    padding: 1em;
}

.comments-container {
    display: none;
}

.reply-container {
    display: none;
    margin-top: 1em;
    margin-bottom: 1em;
    padding: 0.5em;
}

.reply-container textarea {
    padding: 0.5em;
    width: 100%;
    box-sizing: border-box;
    background-color: rgb(var(--color-offwhite));
    border: 0.2em solid transparent;
}

.reply-container textarea:focus {
    border: 0.2em solid rgb(var(--color-highlight));
}

.reply-tools-container {
    width: 100%;
    height: 2em;
}

